# modelviewer

./: .gitlab-ci.yml  CMakeLists.txt  README.md  qt_functions.cmake
cmake/: binary2cpp.cmake  dependencies.cmake  licenses.cmake  qt_functions.cmake  text2cpp.cmake
src/: Animation.hpp  Bone.cpp  Bone.hpp  BoneTransform.cpp  BoneTransform.hpp  Camera.cpp  Camera.hpp  Globals.cpp  Globals.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelImporter.cpp  ModelImporter.hpp  MouseEvent.cpp  MouseEvent.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp  main.cpp  noncopyable.hpp
src/gl_tools/: Buffer.cpp  Buffer.hpp  Error.cpp  Error.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GL.hpp  ImageIO.cpp  ImageIO.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Types.hpp  VertexArray.cpp  VertexArray.hpp
src/glsl/: phong.fs.glsl  phong.vs.glsl
src/math/: Intersections.cpp  Intersections.hpp  Line.cpp  Line.hpp  Plane.cpp  Plane.hpp  mat3.hpp  mat4.hpp  math.hpp  quat.hpp  quat.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl
src/widgets/: GlWidget.cpp  GlWidget.hpp  Styles.cpp  Styles.hpp
src/windows/: AboutDialog.cpp  AboutDialog.hpp  ControlsDialog.cpp  ControlsDialog.hpp  LicenseDialog.cpp  LicenseDialog.hpp  MainWindow.cpp  MainWindow.hpp
ui/: about.ui  controls.ui  licenses.ui  mainwindow.ui
